<resources>
    <string name="app_name">Foundrytreasure</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_login">LoginFragment</string>
    <string name="title_register">RegisterFragment</string>
    <string name="txt_login">Login</string>
    <string name="txt_register">Register</string>
    <string name="txt_username_or_email_address">Username or Email Address*</string>
    <string name="txt_email_address">Email Address*</string>
    <string name="text_username_or_email_address">Username or Email Address</string>
    <string name="text_email_address">Email Address</string>
    <string name="text_welcome">Welcome back!\nPlease log in to continue!</string>
    <string name="txt_password">Password*</string>
    <string name="text_password">Password</string>
    <string name="text_remember_me">Remember Me</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_create_account">Create an account\nTo explore a wide range of fine clothing</string>
    <string name="txt_name">Name*</string>
    <string name="text_name">Name</string>
    <string name="txt_mobile">Mobile Number*</string>
    <string name="text_mobile">Mobile Number</string>
    <string name="text_accept_terms"><![CDATA[Agree With Terms & Conditions?]]></string>
    <string name="txt_login_now">Already have an Account! <font color="#FF3700B3">Login</font></string>
    <string name="txt_register_now">Don\'t have an Account! <font color="#FF3700B3">Register</font></string>
    <string name="text_search_product">Search Product</string>
    <string name="text_dummy_banner_title">New Collection\nMen\'s Coats &amp; Jackets</string>
    <string name="text_categories">Categories</string>
    <string name="text_trending_products">Trending Products</string>
    <string name="text_category_name">Category Name</string>
    <string name="text_category_price">From 200 INR</string>
    <string name="title_more">More</string>
    <string name="text_profile">Profile</string>
    <string name="text_orders">Orders</string>
    <string name="text_about_us">About Us</string>
    <string name="text_contact_us">Contact Us</string>
    <string name="text_terms_conditions">Terms and Conditions</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="text_logout">Logout</string>
    <string name="title_cart">Cart</string>
    <string name="text_no_items">No items</string>
    <string name="text_dummy_product_name">Beige Elastic Runner Shoes</string>
    <string name="text_product_price">INR %s</string>
    <string name="text_1">1</string>
    <string name="text_product_price_total">Total: INR %s</string>
    <string name="title_profile">Profile</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="title_about_us">About Us</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_terms_conditions">Terms &amp; Conditions</string>
    <string name="txt_about_us">Cibaca Clothing Company\n\n\nPraesent dapibus, neque id cursus ucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.</string>
    <string name="txt_contact_us">Contact Information\n\nVestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</string>
    <string name="text_address">70 Washington Square South New York, NY 10012, United States</string>
    <string name="text_office">Office</string>
    <string name="text_phone">+91 9876543210</string>
    <string name="text_email">xyz@gmail.com</string>
    <string name="text_any_question">Got Any Questions?</string>
    <string name="txt_email">Email*</string>
    <string name="txt_phone">Phone*</string>
    <string name="text_subject">Subject</string>
    <string name="txt_message">Message</string>
    <string name="text_send_message">Send Message</string>
    <string name="txt_first_name">First Name*</string>
    <string name="txt_last_name">Last Name*</string>
    <string name="txt_display_name">Display Name*</string>
    <string name="text_current_password">Current Password</string>
    <string name="text_new_password">New Password</string>
    <string name="txt_confirm_new_password">Confirm New Password</string>
    <string name="text_save_changes">Save Changes</string>
    <string name="title_shop">Shop</string>
    <string name="text_settings">Settings</string>
    <string name="text_category">Category</string>
    <string name="text_no_category">No Category</string>
    <string name="text_sub_category">Sub Categories</string>
    <string name="title_products">Products</string>
    <string name="title_product_details">Product Details</string>
    <string name="text_dummy_product_desc">Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing. Sed lectus.</string>
    <string name="text_add_to_cart">Add To Cart</string>
    <string name="text_small">Small</string>
    <string name="text_medium">Medium</string>
    <string name="text_large">Large</string>
    <string name="text_extra_large">Extra Large</string>
    <string name="title_description">Description</string>
    <string name="title_additional_info">Addtitional Information</string>
    <string name="title_shipping_returns">Shipping &amp; Returns</string>
    <string name="text_dummy_product_info">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna viverra non, semper suscipit, posuere a, pede. Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis. Phasellus ultrices nulla quis nibh. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique cursus.\n\nNunc nec porttitor turpis. In eu risus enim. In vitae mollis elit.\n\nVivamus finibus vel mauris ut vehicula.\n\nNullam a magna porttitor, dictum risus nec, faucibus sapien. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna viverra non, semper suscipit, posuere a, pede. Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis. Phasellus ultrices nulla quis nibh. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique cursus.</string>
    <string name="text_dummy_product_add_info"><![CDATA[Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna viverra non, semper suscipit, posuere a, pede. Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci.  Fabric & care Faux suede fabric Gold tone metal hoop handles. RI branding Snake print trim interior Adjustable cross body strap Height: 31cm; Width: 32cm; Depth: 12cm; Handle Drop: 61cm]]></string>
    <string name="text_size">Size</string>
    <string name="text_one_size">One Size</string>
    <string name="text_delivery_return">Delivery &amp; returns</string>
    <string name="txt_return">We deliver to over 100 countries around the world. For full details of the delivery options we offer, please view our Delivery information\n\nWe hope you’ll love every purchase, but if you ever need to return an item you can do so within a month of receipt. For full details of how to make a return, please view our Returns information</string>
    <string name="title_you_may_also_like">You May Also Like</string>
    <string name="title_my_orders">My Orders</string>
    <string name="title_refund_policy">Refund Policy</string>
    <string name="text_notification_title">Notification Title</string>
    <string name="text_notification_time">10 days ago</string>
    <string name="text_order_title">Order Title</string>
    <string name="text_order_time">Yesterday</string>
    <string name="title_order_details">Order Details</string>
    <string name="text_order_info">Purchased on: Yesterday</string>
    <string name="title_checkout">Checkout</string>
    <string name="text_billing_details">Billing Details</string>
    <string name="txt_company_name">Company Name</string>
    <string name="txt_country">Country*</string>
    <string name="txt_address">Street Address*</string>
    <string name="text_town">Town/City*</string>
    <string name="text_state">State*</string>
    <string name="text_pin_code">Pincode/ZIP*</string>
    <string name="text_order_notes">Order Notes</string>
</resources>