<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.foundrytreasure.main.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_view_cart"
            app:destination="@+id/navigation_cart" />

        <action
            android:id="@+id/action_go_to_notifications"
            app:destination="@+id/navigation_notifications" />

        <action
            android:id="@+id/action_go_to_sub_category"
            app:destination="@+id/navigation_sub_category" />

    </fragment>

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.foundrytreasure.main.ui.shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop">

        <action
            android:id="@+id/action_go_to_sub_category"
            app:destination="@+id/navigation_sub_category" />

    </fragment>

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.foundrytreasure.main.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more">

        <action
            android:id="@+id/action_go_to_about_us"
            app:destination="@+id/navigation_about_us" />

        <action
            android:id="@+id/action_go_to_contact_us"
            app:destination="@+id/navigation_contact_us" />

        <action
            android:id="@+id/action_go_to_terms_conditions"
            app:destination="@+id/navigation_terms_conditions" />

        <action
            android:id="@+id/action_go_to_privacy_policy"
            app:destination="@+id/navigation_privacy_policy" />

        <action
            android:id="@+id/action_go_to_refund_policy"
            app:destination="@+id/navigation_refund_policy" />

        <action
            android:id="@+id/action_go_to_profile"
            app:destination="@+id/navigation_profile" />

        <action
            android:id="@+id/action_go_to_my_orders"
            app:destination="@+id/navigation_my_orders" />

        <action
            android:id="@+id/action_go_to_notifications"
            app:destination="@+id/navigation_notifications" />

    </fragment>

    <fragment
        android:id="@+id/navigation_sub_category"
        android:name="com.foundrytreasure.main.ui.sub_category.SubCategoryFragment"
        android:label="@string/text_sub_category"
        tools:layout="@layout/fragment_sub_category">

        <action
            android:id="@+id/action_go_to_product_list"
            app:destination="@+id/navigation_product" />

    </fragment>

    <fragment
        android:id="@+id/navigation_product"
        android:name="com.foundrytreasure.main.ui.product.ProductFragment"
        android:label="@string/title_products"
        tools:layout="@layout/fragment_product">

        <action
            android:id="@+id/action_go_to_product_details"
            app:destination="@+id/navigation_product_details" />

    </fragment>

    <fragment
        android:id="@+id/navigation_product_details"
        android:name="com.foundrytreasure.main.ui.product.ProductDetailsFragment"
        android:label="@string/title_product_details"
        tools:layout="@layout/fragment_product_details">

        <action
            android:id="@+id/action_view_cart"
            app:destination="@+id/navigation_cart" />

    </fragment>

    <fragment
        android:id="@+id/navigation_checkout"
        android:name="com.foundrytreasure.main.ui.checkout.CheckoutFragment"
        android:label="@string/title_checkout"
        tools:layout="@layout/fragment_checkout" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.foundrytreasure.main.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart">

        <action
            android:id="@+id/action_checkout"
            app:destination="@+id/navigation_checkout" />

    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.foundrytreasure.main.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_my_orders"
        android:name="com.foundrytreasure.main.ui.my_orders.MyOrdersFragment"
        android:label="@string/title_my_orders"
        tools:layout="@layout/fragment_my_orders">

        <action
            android:id="@+id/action_go_to_order_details"
            app:destination="@+id/navigation_order_details" />

    </fragment>

    <fragment
        android:id="@+id/navigation_order_details"
        android:name="com.foundrytreasure.main.ui.my_orders.OrderDetailsFragment"
        android:label="@string/title_order_details"
        tools:layout="@layout/fragment_order_details" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.foundrytreasure.main.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications">

        <action
            android:id="@+id/action_go_to_notifications_product_details"
            app:destination="@+id/navigation_product_details" />

    </fragment>

    <fragment
        android:id="@+id/navigation_about_us"
        android:name="com.foundrytreasure.main.ui.about_us.AboutUsFragment"
        android:label="@string/title_about_us"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/navigation_contact_us"
        android:name="com.foundrytreasure.main.ui.contact_us.ContactUsFragment"
        android:label="@string/title_contact_us"
        tools:layout="@layout/fragment_contact_us" />

    <fragment
        android:id="@+id/navigation_privacy_policy"
        android:name="com.foundrytreasure.main.ui.privacy_policy.PrivacyPolicyFragment"
        android:label="@string/title_privacy_policy"
        tools:layout="@layout/fragment_privacy_policy" />

    <fragment
        android:id="@+id/navigation_refund_policy"
        android:name="com.foundrytreasure.main.ui.refund_policy.RefundPolicyFragment"
        android:label="@string/title_refund_policy"
        tools:layout="@layout/fragment_refund_policy" />

    <fragment
        android:id="@+id/navigation_terms_conditions"
        android:name="com.foundrytreasure.main.ui.terms_conditions.TermsConditionsFragment"
        android:label="@string/title_terms_conditions"
        tools:layout="@layout/fragment_terms_conditions" />

</navigation>