<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_auth"
    app:startDestination="@id/nav_login_fragment">

    <fragment
        android:id="@+id/nav_login_fragment"
        android:name="com.cibaka.auth.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_from_login_to_register"
            app:destination="@id/nav_register_fragment" />

        <action
            android:id="@+id/action_from_login_to_main_activity"
            app:destination="@id/nav_main_activity" />

    </fragment>

    <fragment
        android:id="@+id/nav_register_fragment"
        android:name="com.cibaka.auth.ui.register.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_from_register_to_login"
            app:destination="@id/nav_login_fragment" />

        <action
            android:id="@+id/action_from_register_to_main_activity"
            app:destination="@id/nav_main_activity" />

    </fragment>

    <activity
        android:id="@+id/nav_main_activity"
        android:name="com.cibaka.main.MainActivity"
        android:label="@string/title_home"
        tools:layout="@layout/activity_main" />

</navigation>